@@ -110,6 +110,11 @@ They include default paths to various programs (such as
 and
 .IR tbl ),
 and default sets of arguments to those programs.
+.TP
+.B NOCACHE
+This flag prevents
+.BR %man% (1)
+from creating cat pages automatically.
 .SH BUGS
 Unless the rules above are followed and observed precisely, the manual pager
 utilities will not function as desired.
