@@ -108,3 +108,7 @@ MANDB_MAP	/opt/man		/var/cache/man/opt
 # particular order. Sections with extensions should usually be adjacent to
 # their main section (e.g. "1 1mh 8 ...").
 SECTION		1 n l 8 3 2 5 4 9 6 7
+#---------------------------------------------------------
+# Flags.
+# NOCACHE keeps man from creating cat pages.
+#NOCACHE
