@@ -45,6 +45,9 @@ Major changes since man-db 2.4.4:
 	  active, so man will only need to block afterwards if the pager is
 	  exited very quickly.
 
+	o Setting NOCACHE in the configuration file now prevents man from
+	  ever creating cat pages automatically.
+
 man-db 2.4.4 (12 February 2007)
 ===============================
 
